<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ParagraphIndentSpacing</class>
 <widget class="QWidget" name="ParagraphIndentSpacing">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>449</width>
    <height>412</height>
   </rect>
  </property>
  <property name="whatsThis">
   <string>&lt;p&gt;&lt;ul&gt;&lt;li&gt;&lt;b&gt;Single&lt;/b&gt;: The normal linespacing&lt;/li&gt;&lt;/ul&gt;&lt;/p&gt; </string>
  </property>
  <layout class="QGridLayout">
   <item row="0" column="0">
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Indent</string>
     </property>
     <layout class="QGridLayout" columnstretch="0,0,1">
      <item row="0" column="0">
       <widget class="QLabel">
        <property name="text">
         <string>Left:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="buddy">
         <cstring>left</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="KoUnitDoubleSpinBox" name="left"/>
      </item>
      <item row="0" column="2" rowspan="2">
       <spacer>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>0</width>
          <height>0</height>
         </size>
        </property>
       </spacer>
      </item>
      <item row="1" column="0">
       <widget class="QLabel">
        <property name="text">
         <string>Right:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="buddy">
         <cstring>right</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="KoUnitDoubleSpinBox" name="right"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel">
        <property name="text">
         <string>First Line:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="buddy">
         <cstring>first</cstring>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="KoUnitDoubleSpinBox" name="first"/>
      </item>
      <item row="2" column="2">
       <widget class="QCheckBox" name="autoTextIndent">
        <property name="text">
         <string>Auto-infer from text size</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QGroupBox">
     <property name="whatsThis">
      <string>&lt;p&gt;&lt;ul&gt;&lt;li&gt;&lt;b&gt;Single&lt;/b&gt;: The normal linespacing&lt;/li&gt;&lt;/ul&gt;&lt;/p&gt; </string>
     </property>
     <property name="title">
      <string>Line Spacing</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
       <layout class="QHBoxLayout" stretch="0,0,1">
        <property name="margin">
         <number>0</number>
        </property>
        <item>
         <widget class="QComboBox" name="lineSpacing"/>
        </item>
        <item>
         <widget class="QStackedWidget" name="spacingStack">
          <property name="currentIndex">
           <number>0</number>
          </property>
          <widget class="QWidget" name="unitsPage">
           <layout class="QHBoxLayout">
            <property name="margin">
             <number>0</number>
            </property>
            <item>
             <widget class="KoUnitDoubleSpinBox" name="custom"/>
            </item>
           </layout>
          </widget>
          <widget class="QWidget" name="percentPage">
           <layout class="QHBoxLayout">
            <property name="margin">
             <number>0</number>
            </property>
            <item>
             <widget class="QSpinBox" name="proportional">
              <property name="suffix">
               <string> %</string>
              </property>
              <property name="minimum">
               <number>85</number>
              </property>
              <property name="maximum">
               <number>999</number>
              </property>
              <property name="singleStep">
               <number>5</number>
              </property>
              <property name="value">
               <number>100</number>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </widget>
        </item>
        <item>
         <spacer>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QFormLayout">
        <property name="fieldGrowthPolicy">
         <enum>QFormLayout::ExpandingFieldsGrow</enum>
        </property>
        <property name="margin">
         <number>0</number>
        </property>
        <item row="0" column="0">
         <widget class="QLabel">
          <property name="text">
           <string>Use Font Metrics:</string>
          </property>
          <property name="buddy">
           <cstring>useFont</cstring>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QCheckBox" name="useFont">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QGroupBox">
     <property name="title">
      <string>Paragraph Space</string>
     </property>
     <layout class="QFormLayout">
      <item row="0" column="0">
       <widget class="QLabel">
        <property name="text">
         <string>Before:</string>
        </property>
        <property name="buddy">
         <cstring>before</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="KoUnitDoubleSpinBox" name="before"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel">
        <property name="text">
         <string>After:</string>
        </property>
        <property name="buddy">
         <cstring>after</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="KoUnitDoubleSpinBox" name="after"/>
      </item>
     </layout>
    </widget>
   </item>
   <item row="3" column="0">
    <spacer>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>313</width>
       <height>16</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KoUnitDoubleSpinBox</class>
   <extends>QDoubleSpinBox</extends>
   <header>KoUnitDoubleSpinBox.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
